# synergy

./: .babelrc  .deployment  .dockerignore  .eslintignore  .eslintrc  .gitignore  .travis.yml  AZURE_DEPLOYMENT_FIX.md  AZURE_DEPLOYMENT_ISSUE_FIXED.md  AZURE_DEPLOYMENT_TROUBLESHOOTING.md  AZURE_ORYX_BUILD_FIX.md  COMPLETE_AZURE_DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.prod  GAME_STATUS_WORKING.md  HACKATHON_FINAL_DAY_TASKS.md  IMPLEMENTATION_COMPLETE.md  NODE_18_UPGRADE_FINAL_REPORT.md  PERFORMANCE_REPORT.json  PERFORMANCE_REPORT.md  PHASE_1_2_COMPLETION.md  PRD_NODE_18_UPGRADE.md  PRD_PHASE_5_PRODUCTION_STABILITY.md  PRD_SMART_CONTRACT_CI_CD_FIXES.md  PRD_SMART_CONTRACT_HACKATHON.md  README.md  SMART_CONTRACT_DEPLOYMENT.md  SMART_CONTRACT_TESTING_GUIDE.md  app.json  azure-validation.js  complete-phase-1-2.js  config.js  gulpfile.js  ink-tutorial.md  manifest.yml  package-lock.json  package.json  phase-2-1-production-optimization.js  phase-3-azure-deployment-fix.js  (+18 more)
.github/workflows/: azure-deployment-alternative.yml  hackathon-full-deploy.yml  main_synergy42.yml  smart-contract-ci.yml
.kiro/specs/: HACKATHON-CLOUD-DEVELOPMENT.md
.kiro/specs/agario-buyin-smart-contract/: design.md  integration-tasks.md  requirements.md  tasks.md
agario_buyin/: .gitignore  Cargo.toml
agario_buyin/src/: lib.rs
config/: production.js
src/: lib.rs
src/client/: index.html  index_simple.html  wallet-standalone-test.html  wallet-test.html
src/client/css/: main.css
src/client/js/: app.js  balance-utils.js  contract-connection.js  (+13 more)
src/server/: server.js
(+2 files in other folders)
